syntax = "proto3";

package arduino_trader.common;

import "common/common.proto";

// Security represents a tradable security
message Security {
  string symbol = 1;
  string isin = 2;
  string name = 3;
  string exchange = 4;
  string currency = 5;
  string security_type = 6;
  common.Money current_price = 7;
  common.Timestamp price_updated = 8;
  bool is_tradable = 9;
  double market_cap = 10;
  string sector = 11;
  string industry = 12;
}

// List of securities
message SecurityList {
  repeated Security securities = 1;
}
